--- a/week-5/day-3/tiyrailssports/Gemfile
+++ b/week-5/day-3/tiyrailssports/Gemfile
@@ -30,6 +30,10 @@ gem 'bcrypt', '~> 3.1.7'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+# Bootstrap
+gem 'bootstrap-sass'
+gem 'autoprefixer-rails'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
