Adds omniauth for using OAuth login via Github

--- a/week-6/day-1/tiyrailssports/Gemfile
+++ b/week-6/day-1/tiyrailssports/Gemfile
@@ -27,6 +27,13 @@ gem 'jbuilder', '~> 2.5'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
+# Authentication via oauth
+gem 'omniauth'
+gem 'omniauth-github'
+
+# Environment
+gem 'dotenv-rails'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
