--- a/week-6/day-3/devise-tiysports/Gemfile
+++ b/week-6/day-3/devise-tiysports/Gemfile
@@ -33,6 +33,9 @@ gem 'jbuilder', '~> 2.5'
 # Authentication/authroization gems
 gem 'devise'
 
+# Adding in haml
+gem 'haml-rails'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
