Converting our app to React. Hooray!

--- a/week-8/day-3/all-ruby-books/Gemfile
+++ b/week-8/day-3/all-ruby-books/Gemfile
@@ -21,6 +21,8 @@ gem 'jquery-rails'
 # Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
 gem 'turbolinks', '~> 5'
 
+gem 'react-rails'
+gem 'jbuilder'
 
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 3.0'
