Updates to our all ruby books jquery

--- a/week-8/day-4/all-ruby-books-jquery/Gemfile
+++ b/week-8/day-4/all-ruby-books-jquery/Gemfile
@@ -47,3 +47,6 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'bootstrap-generators', github: 'gstark/bootstrap-generators', branch: 'includes-simplified-controller-scaffold'
 gem 'bootstrap-social-rails'
 gem 'font-awesome-rails'
+
+# Use the httparty gem for http requests
+gem 'httparty'
